<resources>
    <string name="app_name">Heart Fit</string>
    <string name="history">History</string>
    <string name="home">Main</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort by:</string>


    <string-array name="sort_options">
        <item>Sort by Time Performed</item>
        <item>Sort by Duration</item>
        <item>Sort by Hearts Collected</item>
        <item>Sort by Difficulty</item>
        <item>Sort by Calories Burned</item>
        <item>Last Week</item>
        <item>Last Month</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment">Equipment</string>
    <string name="which_equipment_do_you_have_at_home">Which equipment do you have at home?</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="start_workout">Start Workout</string>
    <string name="login_register">login_register</string>
    <string name="ok">OK</string>
    <string name="next_up">Next Up</string>
    <string name="weight_separator">.</string>
    <string name="duration">duration</string>
    <string name="calories">Calories</string>
    <string name="number_example">00</string>
    <string name="exercises">exercises</string>
    <string name="exercises_done">Exercises Done</string>
    <string name="workout_exit_title">Exit Workout</string>
    <string name="workout_exit_message">Are you sure you would like to exit this workout?\n\nWorkout progress will not be saved.</string>
    <string name="workout_exit_positive">Exit</string>
    <string name="workout_exit_negative">Resume</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="hours">Hours</string>
    <string name="_0_0">0.0</string>
    <string name="_0">0</string>
    <string name="workouts">Workouts</string>
    <string name="loading">Loading...</string>
    <string name="app_secondary_title">Your equipment, your workouts</string>
    <string name="burned">burned</string>
    <string name="collected">collected</string>
    <string name="viewing_options">Filter Options</string>
    <string name="change_later">You can change it later in Settings</string>
    <string name="workout_delete_negative">cancel</string>
    <string name="workout_delete_positive">delete</string>
    <string name="workout_delete_message">Are you sure you want to delete this workout summary log?</string>
    <string name="workout_delete_title">Delete workout</string>

</resources>